# fuxi-kubernetes

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: local.conf.sample  plugin.sh  settings
doc/source/: conf.py  index.rst
doc/source/devref/: flex_volume_driver.rst  index.rst  provisioner.rst
etc/: fuxi_kubernetes.conf.sample  rootwrap.conf
etc/oslo-config-generator/: fuxi-k8s-config-generator.conf
etc/rootwrap.d/: fuxi-kubernetes.filters
fuxi_kubernetes/: __init__.py  exceptions.py  i18n.py  opts.py  utils.py  version.py
fuxi_kubernetes/cmd/: cinder.py  driver_server.py  driver_service.py  manila.py  provisioner.py
fuxi_kubernetes/common/: config.py  constants.py
fuxi_kubernetes/drivers/: base.py
fuxi_kubernetes/drivers/cinder/: cinder.py
fuxi_kubernetes/flex_volume_drivers/drivers/: base.py  cinder.py  cinder.sh  manila.sh
fuxi_kubernetes/flex_volume_drivers/drivers/cinder/: cinder.py  cinder.sh  client.py
fuxi_kubernetes/flex_volume_drivers/drivers/manila/: manila.py
fuxi_kubernetes/flex_volume_drivers/server/: controller.py  utils.py
fuxi_kubernetes/flex_volume_drivers/server/cinder/: bare_metal_host.py  cinder.py
fuxi_kubernetes/flex_volume_drivers/service/: controler.py  utils.py
fuxi_kubernetes/flex_volume_drivers/service/cinder/: bare_metal_host.py  cinder.py
fuxi_kubernetes/provisioner/: controller.py  provisioner.py  provisioner_deleter.py  service.py
fuxi_kubernetes/provisioner/provision_plugins/: cinder_provision_plugin.py  provision_plugin.py
fuxi_kubernetes/provisioner/volume_plugins/: base_volume_plugin.py  cinder_volume_plugin.py
fuxi_kubernetes/provisioner/watch_framework/: cache.py  consumer.py  controller.py  delta_fifo.py  producer.py  reflector.py
fuxi_kubernetes/tests/unit/: test_fuxi_kubernetes.py
fuxi_kubernetes/tests/unit/drivers/: test_base_volume_driver.py
tools/: generate_config_file_samples.sh
