[metadata]
name = fuxi-kubernetes
summary = Make Kubernetes integration with OpenStack storage
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    fuxi-kubernetes

[entry_points]
console_scripts =
    fuxi-k8s-volume-driver-cinder = fuxi_kubernetes.cmd.cinder:main
    fuxi-k8s-volume-driver-manila = fuxi_kubernetes.cmd.manila:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = fuxi-kubernetes/locale
domain = fuxi-kubernetes

[update_catalog]
domain = fuxi-kubernetes
output_dir = fuxi-kubernetes/locale
input_file = fuxi-kubernetes/locale/fuxi-kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fuxi-kubernetes/locale/fuxi-kubernetes.pot
